# crew-ai-repo

./: .env.example  .gitignore  Dockerfile  README.md  article.md  pyproject.toml
scratch/: debug_tracing.py
src/api_evolution_crew/: crew.py  main.py  routes.py  server.py  tools.py
src/api_evolution_crew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api_evolution_crew/config/: agents.yaml  tasks.yaml
